--- a/css/styles.css
+++ b/css/styles.css
@@ -17,3 +17,15 @@ body{
     overflow-x: auto;
     background-image: url("../images/water0.png");
 }
+
+#ports{
+    display: flex;
+    margin-top: 96px;
+    justify-content: space-around;
+}
+
+#ports > .port{
+    width: 64px;
+    height: 32px;
+    background-image: url("../images/port.png");
+}
